@@ -3,6 +3,7 @@
 *Add option under the player unitframe section to Enable/Disable the Rested Icon.
 *Add slash command "/egrid" it's arguements can be 4-256. If no arguements then the grid will be hidden.
 *Add slash command "/gr" to automatically change the channel you're talking in to the highest channel available.
+*Add skin for the Blizzard Scroll Of Resurrection frame.
 
 [b]Changes[/b]
 *Removed the WhisperLevel option I added previously because it was a pain to debug myself. And it was flawed.
